--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <article>
             <h1>About Me</h1>
-            <img src="/assets/images/selfie.png" alt="picture of Marc">
+            <img src="assets/images/selfie.png" alt="picture of Marc">
             <p>    
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eveniet exercitationem facilis officiis. Soluta repellendus earum, amet animi perspiciatis laboriosam maxime ad doloremque dolores. A aspernatur quaerat enim sunt alias?
             </p>
