added dark mode

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     <footer>
         <small>Copyright ©</small>
     </footer>
+    <button class="dark-mode-toggle">Dark Mode</button>
+    <script src="assets/js/darkMode.js"></script>
     
     
 </body>
