--- a/portfolio.html
+++ b/portfolio.html
@@ -30,19 +30,19 @@
         <article>
             <h1>Portfolio</h1>
             <div class="port-cont">
-                <figure style="background-image: url(https://lorempixel.com/300/250/technics/1)">
+                <figure style="background-image: url('assets/images/pic1.jpg')">
                     <figcaption>Hangman</figcaption>
                 </figure>
-                <figure style="background-image: url(https://lorempixel.com/300/250/technics/2)">
+                <figure style="background-image: url(assets/images/pic2.jpg)">
                     <figcaption>RPG Game</figcaption>
                 </figure>
-                <figure style="background-image: url(https://lorempixel.com/300/250/technics/3)">
+                <figure style="background-image: url(assets/images/pic3.jpg)">
                     <figcaption>Trivia Game</figcaption>
                 </figure>
-                <figure style="background-image: url(https://lorempixel.com/300/250/technics/4)">
+                <figure style="background-image: url(assets/images/pic4.jpg)">
                     <figcaption>Rutgers Info Widget</figcaption>
                 </figure>
-                <figure style="background-image: url(https://lorempixel.com/300/250/technics/5)">
+                <figure style="background-image: url(assets/images/pic5.jpg)">
                     <figcaption>Rock Paper Scissors</figcaption>
                 </figure>
                 
@@ -59,6 +59,7 @@
         <small>Copyright ©</small>
     </footer>
     <button class="dark-mode-toggle">Dark Mode</button>
+    <div class="loading"><div>Marc</div></div>
     <script src="assets/js/darkMode.js"></script>
 </body>
 </html>
