--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html">About</a>
+                        <a href="javascript:delay('index.html')">About</a>
                     </li>
                     <li>
-                        <a href="portfolio.html">Portfolio</a>
+                        <a href="javascript:delay('portfolio.html')">Portfolio</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                            <a href="javascript:delay('contact.html')">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -51,7 +51,7 @@
         <small>Copyright ©</small>
     </footer>
     <button class="dark-mode-toggle">Dark Mode</button>
-    <div class="loading"><div>Marc</div></div>
+    <div class="loading"><div>&#128556</div></div>
     <script src="assets/js/darkMode.js"></script>
     
     
