--- a/index.html
+++ b/index.html
@@ -31,14 +31,26 @@
             <h1>About Me</h1>
             <img src="assets/images/selfie.png" alt="picture of Marc">
             <p>    
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eveniet exercitationem facilis officiis. Soluta repellendus earum, amet animi perspiciatis laboriosam maxime ad doloremque dolores. A aspernatur quaerat enim sunt alias?
+                    In west Philadelphia born and raised
+                    On the playground was where I spent most of my days
+                    Chillin' out maxin' relaxin' all cool
+                    And all shootin some b-ball outside of the school
+                    When a couple of guys who were up to no good
+                    Started making trouble in my neighborhood
+                    I got in one little fight and my mom got scared
+                    She said 'You're movin' with your auntie and uncle in Bel Air'            </p>
+            <p>    
+                    I whistled for a cab and when it came near
+                    The license plate said fresh and it had dice in the mirror
+                    If anything I could say that this cab was rare
+                    But I thought 'Nah, forget it' - 'Yo, homes to Bel Air'
             </p>
             <p>    
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eveniet exercitationem facilis officiis. Soluta repellendus earum, amet animi perspiciatis laboriosam maxime ad doloremque dolores. A aspernatur quaerat enim sunt alias?
-            </p>
-            <p>    
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eveniet exercitationem facilis officiis. Soluta repellendus earum, amet animi perspiciatis laboriosam maxime ad doloremque dolores. A aspernatur quaerat enim sunt alias?
-            </p>
+                    I pulled up to the house about seven or eight
+                    And I yelled to the cabbie 'Yo homes smell ya later'
+                    I looked at my kingdom
+                    I was finally there
+                    To sit on my throne as the Prince of Bel Air            </p>
             
 
         </article>
