split js into seperate files

--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,7 @@
     <button class="dark-mode-toggle">Dark Mode</button>
     <div class="loading"><div>&#128556</div></div>
     <script src="assets/js/darkMode.js"></script>
+    <script src="assets/js/transition.js"></script>
     
     
 </body>
