added color theme picker

--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,11 @@
         <small>Copyright ©</small>
     </footer>
     <button class="dark-mode-toggle">Dark Mode</button>
+    <div class="theme-toggle">Theme</div>
     <div class="loading"><div>&#128556</div></div>
     <script src="assets/js/darkMode.js"></script>
     <script src="assets/js/transition.js"></script>
+    <script src="assets/js/theme.js"></script>
     
     
 </body>
