--- a/contact.html
+++ b/contact.html
@@ -52,10 +52,12 @@
     </footer>
     <button class="dark-mode-toggle">Dark Mode</button>
     <div class="theme-toggle">Theme</div>
+    <div class="date-toggle">Modernize</div>
     <div class="loading"><div>&#128556</div></div>
     <script src="assets/js/darkMode.js"></script>
     <script src="assets/js/transition.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="assets/js/dated.js"></script>
     
     
 </body>
