--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <footer>
         <small>Copyright ©</small>
     </footer>
-    <button class="dark-mode-toggle">Dark Mode</button>
-    <div class="theme-toggle">Theme</div>
-    <div class="date-toggle">Modernize</div>
+    <button class="dark-mode-toggle toggle">Dark Mode</button>
+    <div class="theme-toggle toggle">Theme</div>
+    <button class="date-toggle toggle">Modernize</button>
     <div class="loading"><div>&#128556</div></div>
     <script src="assets/js/darkMode.js"></script>
     <script src="assets/js/transition.js"></script>
