--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a href="javascript:delay('portfolio.html')">Portfolio</a>
                     </li>
                     <li>
-                            <a href="javascript:delay('contact.html')">Contact</a>
+                        <a href="javascript:delay('contact.html')">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -38,7 +38,8 @@
                     When a couple of guys who were up to no good
                     Started making trouble in my neighborhood
                     I got in one little fight and my mom got scared
-                    She said 'You're movin' with your auntie and uncle in Bel Air'            </p>
+                    She said 'You're movin' with your auntie and uncle in Bel Air'            
+            </p>
             <p>    
                     I whistled for a cab and when it came near
                     The license plate said fresh and it had dice in the mirror
@@ -50,7 +51,8 @@
                     And I yelled to the cabbie 'Yo homes smell ya later'
                     I looked at my kingdom
                     I was finally there
-                    To sit on my throne as the Prince of Bel Air            </p>
+                    To sit on my throne as the Prince of Bel Air            
+            </p>
             
 
         </article>
