restyled control box

--- a/contact.html
+++ b/contact.html
@@ -50,9 +50,11 @@
     <footer>
         <small>Copyright ©</small>
     </footer>
-    <button class="dark-mode-toggle toggle">Dark Mode</button>
-    <div class="theme-toggle toggle">Theme</div>
-    <button class="date-toggle toggle">Modernize</button>
+    <div class="controls">
+            <button class="dark-mode-toggle toggle">Dark Mode</button>
+            <div class="theme-toggle toggle">Theme</div>
+            <button class="date-toggle toggle">Modernize</button>
+    </div>
     <div class="loading"><div>&#128556</div></div>
     <script src="assets/js/darkMode.js"></script>
     <script src="assets/js/transition.js"></script>
