--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,10 @@
             <h1>Contact</h1>
             <form action="#">
                 <label> Name
-                    <input type="text" placeholder="John Smith">
+                    <input type="text" placeholder="Will Smith">
                 </label>
                 <label> Email
-                    <input type="email" placeholder="example@gmail.com">
+                    <input type="email" placeholder="dj@jazzyjeff.com">
                 </label>
                 <label> Message
                     <textarea></textarea>
