added rpg to prtfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,9 +37,11 @@
                         <figcaption>Bob's Bad Day</figcaption>
                     </figure>
                 </a>
-                <figure style="background-image: url(assets/images/pic2.jpg)">
-                    <figcaption>RPG Game</figcaption>
-                </figure>
+                <a href="https://marcjfj.github.io/power-rangers/">
+                    <figure style="background-image: url('assets/images/power-rangers.PNG')">
+                        <figcaption>Power Rangers RPG</figcaption>
+                    </figure>
+                </a>
                 <figure style="background-image: url(assets/images/pic3.jpg)">
                     <figcaption>Trivia Game</figcaption>
                 </figure>
