added rpg to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                         <figcaption>Power Rangers RPG</figcaption>
                     </figure>
                 </a>
-                <figure style="background-image: url(assets/images/pic3.jpg)">
+                <!-- <figure style="background-image: url(assets/images/pic3.jpg)">
                     <figcaption>Trivia Game</figcaption>
                 </figure>
                 <figure style="background-image: url(assets/images/pic4.jpg)">
@@ -50,7 +50,7 @@
                 </figure>
                 <figure style="background-image: url(assets/images/pic5.jpg)">
                     <figcaption>Rock Paper Scissors</figcaption>
-                </figure>
+                </figure> -->
 
             </div>
 
