--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,11 @@
                         <figcaption>Power Rangers RPG</figcaption>
                     </figure>
                 </a>
+                <a href="https://marcjfj.github.io/javascript-trivia/">
+                    <figure style="background-image: url('assets/images/trivia-thumbnail.png')">
+                        <figcaption>JavaScript Trivia</figcaption>
+                    </figure>
+                </a>
                 <!-- <figure style="background-image: url(assets/images/pic3.jpg)">
                     <figcaption>Trivia Game</figcaption>
                 </figure>
