--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,11 @@
                         <figcaption>JavaScript Trivia</figcaption>
                     </figure>
                 </a>
+                <a href="https://marcjfj.github.io/giffle/">
+                    <figure style="background-image: url('assets/images/giffle.png')">
+                        <figcaption>Giffle</figcaption>
+                    </figure>
+                </a>
                 <!-- <figure style="background-image: url(assets/images/pic3.jpg)">
                     <figcaption>Trivia Game</figcaption>
                 </figure>
