--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,11 @@
                         <figcaption>Giffle</figcaption>
                     </figure>
                 </a>
+                <a href="https://github.com/marcjfj/liri">
+                    <figure style="background-image: url('assets/images/events.gif')">
+                        <figcaption>Giffle</figcaption>
+                    </figure>
+                </a>
                 <!-- <figure style="background-image: url(assets/images/pic3.jpg)">
                     <figcaption>Trivia Game</figcaption>
                 </figure>
