--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                 </a>
                 <a href="https://github.com/marcjfj/liri">
                     <figure style="background-image: url('assets/images/events.gif')">
-                        <figcaption>Giffle</figcaption>
+                        <figcaption>Liri</figcaption>
                     </figure>
                 </a>
                 <!-- <figure style="background-image: url(assets/images/pic3.jpg)">
